# laptoppc

./: .gitignore  README.md  dev-requirements.txt  pyproject.toml
doc/: laptops-hard-to-localize.txt
laptoppc/: common.py  create_dataset.py  create_model.py  helpers.py  main_create_dataset.py  main_example.py  main_train.py  main_visualize_model.py  predict.py  print_model.py  test.py  tools.py  train_model.py  webserver.py
laptoppc/templates/: upload.html
tests/: test_laptoppc.py
