[tool.poetry]
name = "laptoppc"
version = "0.1.0"
description = ""
authors = ["Piotr Włodarek <contact@qertoip.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.1"
DuckDuckGoImages = "^2.0.7"
Flask = "^2.2.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
