[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = 'laptopc'
classifiers = ['Private :: Do Not Upload']
version = '0'

dependencies = [
  'tensorflow >= 2.9.1, < 3',
  'DuckDuckGoImages >= 2.0.7, < 3',
  'Flask >= 2.2.1, < 3',
  'gunicorn >= 20.1.0',
  'matplotlib >= 3.6.1, < 4',
  'pydot >= 1.4.2, < 2',
  'graphviz >= 0.20.1',
]

[project.optional-dependencies]
dev = [
  'pytest'
]
